--- a/package.json
+++ b/package.json
@@ -40,8 +40,12 @@
     "Move"
   ],
   "dependencies": {
+    "@aptos-labs/wallet-adapter-core": "^2.1.0",
+    "@aptos-labs/wallet-adapter-react": "^1.0.5",
+    "@blocto/sdk": "^0.4.6",
     "@noble/hashes": "1.1.3",
     "@scure/bip39": "1.1.0",
+    "aptos": "^1.8.5",
     "axios": "0.27.2",
     "form-data": "4.0.0",
     "tweetnacl": "1.0.3"
