--- a/package.json
+++ b/package.json
@@ -1,71 +1,77 @@
 {
-  "name": "prediction",
-  "description": "Prediction SDK",
-  "license": "MIT",
-  "engines": {
-    "node": ">=11.0.0"
-  },
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
-    }
-  },
-  "scripts": {
-    "prepack": "pnpm build",
-    "build": "pnpm build:clean && pnpm _build:node && pnpm _build:browser",
-    "build:clean": "rm -rf dist",
-    "_build:browser": "tsup --platform browser --format iife --global-name aptosSDK --minify",
-    "_build:node": "tsup --format cjs,esm --dts",
-    "lint": "eslint \"**/*.ts\"",
-    "test": "jest",
-    "fmt": "pnpm _fmt --write",
-    "fmt:check": "pnpm _fmt --check",
-    "cov:clean": "rm -rf coverage"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Bekh-nam/SDK-template.git"
-  },
-  "homepage": "https://github.com/Bekh-nam/SDK-template",
-  "bugs": {
-    "url": "https://github.com/Bekh-nam/SDK-template/issues"
-  },
-  "author": "<Bekh-nam <bekhnam2021@gmail.com>",
-  "keywords": [
-    "Prediction",
-    "Move"
-  ],
-  "dependencies": {
-    "@noble/hashes": "1.1.3",
-    "@scure/bip39": "1.1.0",
-    "axios": "0.27.2",
-    "form-data": "4.0.0",
-    "tweetnacl": "1.0.3"
-  },
-  "devDependencies": {
-    "@types/jest": "28.1.8",
-    "@types/node": "18.6.2",
-    "@typescript-eslint/eslint-plugin": "5.36.2",
-    "@typescript-eslint/parser": "5.36.2",
-    "dotenv": "16.0.2",
-    "eslint": "8.23.0",
-    "eslint-config-airbnb-base": "15.0.0",
-    "eslint-config-airbnb-typescript": "17.0.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-import": "2.26.0",
-    "jest": "28.1.3",
-    "openapi-typescript-codegen": "https://github.com/aptos-labs/openapi-typescript-codegen/releases/download/v0.24.0-p1/openapi-typescript-codegen-v0.24.0-p1.tgz",
-    "prettier": "2.6.2",
-    "ts-jest": "28.0.8",
-    "ts-loader": "9.3.1",
-    "ts-node": "10.9.1",
-    "tsup": "6.2.3",
-    "typedoc": "^0.23.20",
-    "typescript": "4.8.2"
-  },
-  "version": "1.4.0"
+	"name": "prediction",
+	"description": "Prediction SDK",
+	"license": "MIT",
+	"engines": {
+		"node": ">=11.0.0"
+	},
+	"main": "./dist/index.js",
+	"module": "./dist/index.mjs",
+	"types": "./dist/index.d.ts",
+	"exports": {
+		".": {
+			"import": "./dist/index.mjs",
+			"require": "./dist/index.js"
+		}
+	},
+	"scripts": {
+		"prepack": "pnpm build",
+		"build": "pnpm build:clean && pnpm _build:node && pnpm _build:browser",
+		"build:clean": "rm -rf dist",
+		"_build:browser": "tsup --platform browser --format iife --global-name aptosSDK --minify",
+		"_build:node": "tsup --format cjs,esm --dts",
+		"lint": "eslint \"**/*.ts\"",
+		"test": "jest",
+		"fmt": "pnpm _fmt --write",
+		"fmt:check": "pnpm _fmt --check",
+		"cov:clean": "rm -rf coverage"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/Bekh-nam/SDK-template.git"
+	},
+	"homepage": "https://github.com/Bekh-nam/SDK-template",
+	"bugs": {
+		"url": "https://github.com/Bekh-nam/SDK-template/issues"
+	},
+	"author": "<Bekh-nam <bekhnam2021@gmail.com>",
+	"keywords": [
+		"Prediction",
+		"Move"
+	],
+	"dependencies": {
+		"@0xsequence/multicall": "^0.43.28",
+		"@ethersproject/abi": "^5.7.0",
+		"@ethersproject/bytes": "^5.7.0",
+		"@ethersproject/contracts": "^5.7.0",
+		"@ethersproject/providers": "^5.7.2",
+		"@noble/hashes": "1.1.3",
+		"@scure/bip39": "1.1.0",
+		"axios": "0.27.2",
+		"ethers": "5.5.4",
+		"form-data": "4.0.0",
+		"tweetnacl": "1.0.3"
+	},
+	"devDependencies": {
+		"@types/jest": "28.1.8",
+		"@types/node": "18.6.2",
+		"@typescript-eslint/eslint-plugin": "5.36.2",
+		"@typescript-eslint/parser": "5.36.2",
+		"dotenv": "16.0.2",
+		"eslint": "8.23.0",
+		"eslint-config-airbnb-base": "15.0.0",
+		"eslint-config-airbnb-typescript": "17.0.0",
+		"eslint-config-prettier": "8.5.0",
+		"eslint-plugin-import": "2.26.0",
+		"jest": "28.1.3",
+		"openapi-typescript-codegen": "https://github.com/aptos-labs/openapi-typescript-codegen/releases/download/v0.24.0-p1/openapi-typescript-codegen-v0.24.0-p1.tgz",
+		"prettier": "2.6.2",
+		"ts-jest": "28.0.8",
+		"ts-loader": "9.3.1",
+		"ts-node": "10.9.1",
+		"tsup": "6.2.3",
+		"typedoc": "^0.23.20",
+		"typescript": "4.8.2"
+	},
+	"version": "1.4.0"
 }
