--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "prediction",
+  "name": "metaspacecy-aptos-prediction",
   "description": "Prediction SDK",
   "license": "MIT",
   "engines": {
@@ -48,6 +48,7 @@
     "axios": "0.27.2",
     "form-data": "4.0.0",
     "js-sha256": "^0.9.0",
+    "pnpm": "^8.5.1",
     "tweetnacl": "1.0.3"
   },
   "devDependencies": {
@@ -71,5 +72,5 @@
     "typedoc": "^0.23.20",
     "typescript": "4.8.2"
   },
-  "version": "1.4.0"
+  "version": "1.1.7"
 }
