--- a/package.json
+++ b/package.json
@@ -41,15 +41,9 @@
   ],
   "dependencies": {
     "@aptos-labs/wallet-adapter-core": "^2.1.0",
-    "@aptos-labs/wallet-adapter-react": "^1.0.5",
-    "@noble/hashes": "1.1.3",
-    "@scure/bip39": "1.1.0",
     "aptos": "^1.8.5",
-    "axios": "0.27.2",
-    "form-data": "4.0.0",
     "js-sha256": "^0.9.0",
-    "pnpm": "^8.5.1",
-    "tweetnacl": "1.0.3"
+    "pnpm": "^8.5.1"
   },
   "devDependencies": {
     "@types/jest": "28.1.8",
@@ -72,5 +66,5 @@
     "typedoc": "^0.23.20",
     "typescript": "4.8.2"
   },
-  "version": "1.1.7"
+  "version": "1.2.0"
 }
