--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "prediction",
+	"name": "metaspacecy-sdk",
 	"description": "Prediction SDK",
 	"license": "MIT",
 	"engines": {
@@ -28,11 +28,11 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/Bekh-nam/SDK-template.git"
+		"url": "https://github.com/MetaSpacecy/prediction-evm-sdk.git"
 	},
-	"homepage": "https://github.com/Bekh-nam/SDK-template",
+	"homepage": "https://github.com/MetaSpacecy/prediction-evm-sdk.git",
 	"bugs": {
-		"url": "https://github.com/Bekh-nam/SDK-template/issues"
+		"url": "https://github.com/MetaSpacecy/prediction-evm-sdk/issues"
 	},
 	"author": "<Bekh-nam <bekhnam2021@gmail.com>",
 	"keywords": [
@@ -40,17 +40,11 @@
 		"Move"
 	],
 	"dependencies": {
-		"@0xsequence/multicall": "^0.43.28",
 		"@ethersproject/abi": "^5.7.0",
 		"@ethersproject/bytes": "^5.7.0",
 		"@ethersproject/contracts": "^5.7.0",
 		"@ethersproject/providers": "^5.7.2",
-		"@noble/hashes": "1.1.3",
-		"@scure/bip39": "1.1.0",
-		"axios": "0.27.2",
-		"ethers": "5.5.4",
-		"form-data": "4.0.0",
-		"tweetnacl": "1.0.3"
+		"ethers": "5.5.4"
 	},
 	"devDependencies": {
 		"@types/jest": "28.1.8",
@@ -64,7 +58,6 @@
 		"eslint-config-prettier": "8.5.0",
 		"eslint-plugin-import": "2.26.0",
 		"jest": "28.1.3",
-		"openapi-typescript-codegen": "https://github.com/aptos-labs/openapi-typescript-codegen/releases/download/v0.24.0-p1/openapi-typescript-codegen-v0.24.0-p1.tgz",
 		"prettier": "2.6.2",
 		"ts-jest": "28.0.8",
 		"ts-loader": "9.3.1",
@@ -73,5 +66,5 @@
 		"typedoc": "^0.23.20",
 		"typescript": "4.8.2"
 	},
-	"version": "1.4.0"
+	"version": "1.5.3"
 }
