--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
 		"module": "commonjs",
 		"moduleResolution": "node",
 		"noImplicitAny": true,
-		"outDir": "./dist",
+		"outDir": "dist",
 		"sourceMap": true,
 		"strict": true,
 		"target": "es2020",
