--- a/examples/nextjs-example/package.json
+++ b/examples/nextjs-example/package.json
@@ -16,6 +16,7 @@
     "@aptos-labs/wallet-adapter-react": "",
     "@blocto/aptos-wallet-adapter-plugin": "^0.1.2",
     "@martianwallet/aptos-wallet-adapter": "^0.0.3",
+    "@metaspacecy/information-sdk": "^1.0.0",
     "@nightlylabs/aptos-wallet-adapter-plugin": "0.2.12",
     "@openblockhq/aptos-wallet-adapter": "^0.1.5",
     "@pontem/wallet-adapter-plugin": "^0.1.4",
@@ -26,7 +27,6 @@
     "antd": "^5.1.2",
     "aptos": "^1.3.17",
     "fewcha-plugin-wallet-adapter": "^0.1.2",
-    "metaspacecy-aptos-prediction": "^1.2.9",
     "msafe-plugin-wallet-adapter": "^0.1.0",
     "next": "13.0.0",
     "petra-plugin-wallet-adapter": "^0.1.2",
