--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "metaspacecy-sdk",
+	"name": "information-sdk",
 	"description": "Prediction SDK",
 	"license": "MIT",
 	"engines": {
@@ -49,6 +49,7 @@
 		"@ethersproject/bytes": "^5.7.0",
 		"@ethersproject/contracts": "^5.7.0",
 		"@ethersproject/providers": "^5.7.2",
+		"axios": "^1.4.0",
 		"ethers": "5.5.0"
 	},
 	"devDependencies": {
@@ -71,5 +72,5 @@
 		"typedoc": "^0.23.20",
 		"typescript": "4.8.2"
 	},
-	"version": "1.6.15"
+	"version": "1.0.0"
 }
